--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
       <header>
-        <img class="logo" src="/img/SI VALE.png" alt="">
+        <img class="logo" src="./img/SI VALE.png" alt="">
         <h1>Todos los links de los reportes a un solo click</h1>
       </header>
       <main>
