--- a/index.html
+++ b/index.html
@@ -15,24 +15,89 @@
       <main>
         <div class="item item1">REPORTES ATC</div>
         <div class="item item2">REPORTES PEX</div>
-        <div class="item item3">Item 3</div>
-        <div class="item item4">Item 4</div>
-        <div class="item item5">Item 5</div>
-        <div class="item item6">Item 6</div>
-        <div class="item item7">Item 7</div>
-        <div class="item item8">Item 8</div>
-        <div class="item item9">Item 9</div>
-        <div class="item item10">Item 10</div>
-        <div class="item item11">Item 11</div>
-        <div class="item item12">Item 12</div>
-        <div class="item item13">Item 13</div>
-        <div class="item item14">Item 14</div>
-        <div class="item item15">Item 15</div>
-        <div class="item item16">Item 16</div>
-        <div class="item item17">Item 17</div>
-        <div class="item item18">Item 18</div>
+        <div class="item item3 fondoUno" >
+            <button>
+                <a href=""></a>
+                hola
+            </button>
+        </div>
+        <div class="item item4 fondoUno">
+            <button>
+                <a href="">hola</a>
+            </button>
+        </div>
+        <div class="item item5 fondoDos">
+            <button>
+                <a href="">hola</a>
+            </button>
+        </div>
+        <div class="item item6 fondoDos">
+            <button>
+                <a href="">hola</a>
+            </button>
+        </div>
+        <div class="item item7 fondoUno">
+            <button>
+                <a href="">hola</a>
+            </button>
+        </div>
+        <div class="item item8 fondoUno">
+            <button>
+                <a href="">hola</a>
+            </button>
+        </div>
+        <div class="item item9 fondoDos">
+            <button>
+                <a href="">hola</a>
+            </button>
+        </div>
+        <div class="item item10 fondoDos">
+            <button>
+                <a href="">hola</a>
+            </button>
+        </div>
+        <div class="item item11 fondoUno">
+            <button>
+                <a href="">hola</a>
+            </button>
+        </div>
+        <div class="item item12 fondoUno">
+            <button>
+                <a href="">hola</a>
+            </button>
+        </div>
+        <div class="item item13 fondoDos">
+            <button>
+                <a href="">hola</a>
+            </button>
+        </div>
+        <div class="item item14 fondoDos">
+            <button>
+                <a href="">hola</a>
+            </button>
+        </div>
+        <div class="item item15 fondoUno">
+            <button>
+                <a href="">hola</a>
+            </button>
+        </div>
+        <div class="item item16 fondoUno">
+            <button>
+                <a href="">hola</a>
+            </button>
+        </div>
+        <div class="item item17 fondoDos">
+            <button>
+                <a href="">hola</a>
+            </button>
+        </div>
+        <div class="item item18 fondoDos">
+            <button>
+                <a href="">hola</a>
+            </button>
+        </div>
       </main>
-      <footer>Copyright Andres Rojas-Jesus Carrera &copy;</footer>
+      <footer>Copyright Andrés Rojas-Jesús Carrera &copy;</footer>
     
 </body>
 </html>
