--- a/index.html
+++ b/index.html
@@ -27,9 +27,6 @@
         <div class="item item1">
            <p>REPORTES ATC</p> 
         </div>
-        <div class="item item2">
-           <p>REPORTES PEXT</p> 
-        </div>
         <div class="item item3 fondoUno" >
             <button>
                 <a href="https://app.powerbi.com/view?r=eyJrIjoiMTM3MmI1ODYtNmM0Mi00N2MxLTg3ODMtYjNlYzA0OTBjMmJjIiwidCI6IjFhNWRmM2U0LTBiYzgtNDVhNi05MGM0LTZhYzkyOWMzNGRmOCJ9">NPS movilización</a>
@@ -41,64 +38,68 @@
                 <a href="https://app.powerbi.com/view?r=eyJrIjoiMTlmM2Q3NGMtNmQyMS00MDRkLTk3YzktYmYwMDdlODI4OTM2IiwidCI6IjFhNWRmM2U0LTBiYzgtNDVhNi05MGM0LTZhYzkyOWMzNGRmOCJ9">Inicio de actividades</a>
             </button>
         </div>
-        <div class="item item5 fondoDos">
+        <div class="item item7 fondoDos">
             <button>
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiMzkwODJkZmUtNGUyYi00NTc4LWEwOTMtNmRlYjM4MTBhYTYwIiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9&pageName=ReportSection">PANGEACO HORIZONTAL 2023</a>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiMzkwODJkZmUtNGUyYi00NTc4LWEwOTMtNmRlYjM4MTBhYTYwIiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9&pageName=ReportSection">Productividad por rutas</a>
             </button>
         </div>
-        <div class="item item6 fondoDos">
+        <div class="item item8 fondoDos">
             <button>
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiNDA2MzJmODQtNTI2OS00OGFiLWFhZjItMDA2ODk4ZDlmOGU1IiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9&pageName=ReportSection0477d09cb6d0d484a521">TDP verticales 2022-2023</a>
-            </button>
-        </div>
-        <div class="item item7 fondoUno">
-            <button>
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiNjM0ZWFiNWMtZWNmMS00MWU3LWFjMjUtZWFlMjQxNGU5N2Q2IiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9&pageName=ReportSectioncd14ce5ec071b34c4c61">Productividad por rutas</a>
-            </button>
-        </div>
-        <div class="item item8 fondoUno">
-            <button>
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiMWM5MzMzNmQtNzgyYS00YWU5LWJkNmEtOTQ0ZDlhNmQzMDhhIiwidCI6IjFhNWRmM2U0LTBiYzgtNDVhNi05MGM0LTZhYzkyOWMzNGRmOCJ9">NPS POOL-GESTORES ALTAS</a>
-            </button>
-        </div>
-        <div class="item item9 fondoDos">
-            <button>
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiYWFkMTZjODQtYjIwOC00OGZhLWExNjUtZDc2ODUxZjQ1MGFlIiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9">Primer reforzamiento PANGEACO</a>
-            </button>
-        </div>
-        <div class="item item10 fondoDos">
-            <button>
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiNmQ3OTdiMGYtNTIxYi00OGYyLTg4ZGQtMDllZWNiYjUzNzQxIiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9">Tercer reforzamiento PANGEACO</a>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiNDA2MzJmODQtNTI2OS00OGFiLWFhZjItMDA2ODk4ZDlmOGU1IiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9&pageName=ReportSection0477d09cb6d0d484a521">NPS POOL-GESTORES ALTAS</a>
             </button>
         </div>
         <div class="item item11 fondoUno">
             <button>
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiY2Q5ZTc0ZTEtMjBkNi00ZDJkLTk3NWMtNjhmOGY3MGNkM2NhIiwidCI6IjFhNWRmM2U0LTBiYzgtNDVhNi05MGM0LTZhYzkyOWMzNGRmOCJ9">NPS POOL-GESTORES AVERIAS</a>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiNjM0ZWFiNWMtZWNmMS00MWU3LWFjMjUtZWFlMjQxNGU5N2Q2IiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9&pageName=ReportSectioncd14ce5ec071b34c4c61">NPS POOL-GESTORES AVERÍAS</a>
             </button>
         </div>
         <div class="item item12 fondoUno">
             <button>
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiMTI0M2QyNDItYmU2MS00OWQ0LWFjZjItMDQzMGVkYWZlYjZiIiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9">Devoluciones altas</a>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiMWM5MzMzNmQtNzgyYS00YWU5LWJkNmEtOTQ0ZDlhNmQzMDhhIiwidCI6IjFhNWRmM2U0LTBiYzgtNDVhNi05MGM0LTZhYzkyOWMzNGRmOCJ9">Devoluciones altas</a>
             </button>
         </div>
-        <div class="item item13 fondoDos">
+        <div class="item item15 fondoDos">
+            <button>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiYWFkMTZjODQtYjIwOC00OGZhLWExNjUtZDc2ODUxZjQ1MGFlIiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9">Devoluciones averías</a>
+            </button>
+        </div>
+        <div class="item item16 fondoDos">
+            <button>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiNmQ3OTdiMGYtNTIxYi00OGYyLTg4ZGQtMDllZWNiYjUzNzQxIiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9">Boletas pendientes 2023</a>
+            </button>
+        </div>
+
+        <div class="item item2">
+            <p>REPORTES PEXT</p> 
+         </div>
+        <div class="item item5 fondoUno">
+            <button>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiY2Q5ZTc0ZTEtMjBkNi00ZDJkLTk3NWMtNjhmOGY3MGNkM2NhIiwidCI6IjFhNWRmM2U0LTBiYzgtNDVhNi05MGM0LTZhYzkyOWMzNGRmOCJ9">PANGEACO HORIZONTAL 2023</a>
+            </button>
+        </div>
+        <div class="item item6 fondoUno">
+            <button>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiMTI0M2QyNDItYmU2MS00OWQ0LWFjZjItMDQzMGVkYWZlYjZiIiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9">TDP verticales 2022-2023</a>
+            </button>
+        </div>
+        <div class="item item9 fondoDos">
             <button>
                 <a href="">OBRA EJECUTADA PEXT-PINT 2023</a>
             </button>
         </div>
-        <div class="item item14 fondoDos">
+        <div class="item item10 fondoDos">
             <button>
-                <a href="">PEXT CHARGING 1</a>
+                <a href="">Primer reforzamiento PANGEACO</a>
             </button>
         </div>
-        <div class="item item15 fondoUno">
+        <div class="item item13 fondoUno">
             <button>
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiNzQ0OGVkYjAtYWZjYi00ZGFiLWFkMzUtYzNkYjNkMzI0ODE3IiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9">Devoluciones averias</a>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiNzQ0OGVkYjAtYWZjYi00ZGFiLWFkMzUtYzNkYjNkMzI0ODE3IiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9">Tercer reforzamiento PANGEACO</a>
             </button>
         </div>
-        <div class="item item16 fondoUno">
+        <div class="item item14 fondoUno">
             <button>
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiOTRkMWU5MjUtMTQ1Zi00MGU2LTkwNGYtYmQxMTU2NTFkNjc0IiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9&pageName=ReportSection">Boletas pendientes 2023</a>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiOTRkMWU5MjUtMTQ1Zi00MGU2LTkwNGYtYmQxMTU2NTFkNjc0IiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9&pageName=ReportSection">PEXT CHARGING 1</a>
             </button>
         </div>
         <div class="item item17 fondoDos">
