--- a/index.html
+++ b/index.html
@@ -40,32 +40,32 @@
         </div>
         <div class="item item7 fondoDos">
             <button>
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiMzkwODJkZmUtNGUyYi00NTc4LWEwOTMtNmRlYjM4MTBhYTYwIiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9&pageName=ReportSection">Productividad por rutas</a>
+                <a href="">Productividad por rutas</a>
             </button>
         </div>
         <div class="item item8 fondoDos">
             <button>
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiNDA2MzJmODQtNTI2OS00OGFiLWFhZjItMDA2ODk4ZDlmOGU1IiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9&pageName=ReportSection0477d09cb6d0d484a521">NPS POOL-GESTORES ALTAS</a>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiZDExNDc4YzItODEyMy00YjBjLWExMTUtZDhiYzQwYmRlMTg1IiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9">NPS POOL-GESTORES ALTAS</a>
             </button>
         </div>
         <div class="item item11 fondoUno">
             <button>
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiNjM0ZWFiNWMtZWNmMS00MWU3LWFjMjUtZWFlMjQxNGU5N2Q2IiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9&pageName=ReportSectioncd14ce5ec071b34c4c61">NPS POOL-GESTORES AVERÍAS</a>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiZDA4MGMzZDQtNjRjZC00NGUxLTg2MzgtYjVmOWUyOTAyZjllIiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9">NPS POOL-GESTORES AVERÍAS</a>
             </button>
         </div>
         <div class="item item12 fondoUno">
             <button>
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiMWM5MzMzNmQtNzgyYS00YWU5LWJkNmEtOTQ0ZDlhNmQzMDhhIiwidCI6IjFhNWRmM2U0LTBiYzgtNDVhNi05MGM0LTZhYzkyOWMzNGRmOCJ9">Devoluciones altas</a>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiMTI0M2QyNDItYmU2MS00OWQ0LWFjZjItMDQzMGVkYWZlYjZiIiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9">Devoluciones altas</a>
             </button>
         </div>
         <div class="item item15 fondoDos">
             <button>
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiYWFkMTZjODQtYjIwOC00OGZhLWExNjUtZDc2ODUxZjQ1MGFlIiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9">Devoluciones averías</a>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiNzQ0OGVkYjAtYWZjYi00ZGFiLWFkMzUtYzNkYjNkMzI0ODE3IiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9">Devoluciones averías</a>
             </button>
         </div>
         <div class="item item16 fondoDos">
             <button>
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiNmQ3OTdiMGYtNTIxYi00OGYyLTg4ZGQtMDllZWNiYjUzNzQxIiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9">Boletas pendientes 2023</a>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiOTRkMWU5MjUtMTQ1Zi00MGU2LTkwNGYtYmQxMTU2NTFkNjc0IiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9&pageName=ReportSection">Boletas pendientes 2023</a>
             </button>
         </div>
 
@@ -74,32 +74,32 @@
          </div>
         <div class="item item5 fondoUno">
             <button>
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiY2Q5ZTc0ZTEtMjBkNi00ZDJkLTk3NWMtNjhmOGY3MGNkM2NhIiwidCI6IjFhNWRmM2U0LTBiYzgtNDVhNi05MGM0LTZhYzkyOWMzNGRmOCJ9">PANGEACO HORIZONTAL 2023</a>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiMzkwODJkZmUtNGUyYi00NTc4LWEwOTMtNmRlYjM4MTBhYTYwIiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9&pageName=ReportSection">PANGEACO HORIZONTAL 2023</a>
             </button>
         </div>
         <div class="item item6 fondoUno">
             <button>
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiMTI0M2QyNDItYmU2MS00OWQ0LWFjZjItMDQzMGVkYWZlYjZiIiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9">TDP verticales 2022-2023</a>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiNDA2MzJmODQtNTI2OS00OGFiLWFhZjItMDA2ODk4ZDlmOGU1IiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9&pageName=ReportSection0477d09cb6d0d484a521">TDP verticales 2022-2023</a>
             </button>
         </div>
         <div class="item item9 fondoDos">
             <button>
-                <a href="">OBRA EJECUTADA PEXT-PINT 2023</a>
+                <a href="">PEXT CHARGING 1</a>
             </button>
         </div>
         <div class="item item10 fondoDos">
             <button>
-                <a href="">Primer reforzamiento PANGEACO</a>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiYWFkMTZjODQtYjIwOC00OGZhLWExNjUtZDc2ODUxZjQ1MGFlIiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9">Primer reforzamiento PANGEACO</a>
             </button>
         </div>
         <div class="item item13 fondoUno">
             <button>
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiNzQ0OGVkYjAtYWZjYi00ZGFiLWFkMzUtYzNkYjNkMzI0ODE3IiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9">Tercer reforzamiento PANGEACO</a>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiNmQ3OTdiMGYtNTIxYi00OGYyLTg4ZGQtMDllZWNiYjUzNzQxIiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9">Tercer reforzamiento PANGEACO</a>
             </button>
         </div>
         <div class="item item14 fondoUno">
             <button>
-                <a href="https://app.powerbi.com/view?r=eyJrIjoiOTRkMWU5MjUtMTQ1Zi00MGU2LTkwNGYtYmQxMTU2NTFkNjc0IiwidCI6IjFlYmE0NDNmLTIzZTUtNDUzNC05MGQxLTA5NzZhYWJlODZhYyIsImMiOjR9&pageName=ReportSection">PEXT CHARGING 1</a>
+                <a href="">PEXT CHARGING 1</a>
             </button>
         </div>
         <div class="item item17 fondoDos">
